--- a/qatalogue/templates/main_page.html
+++ b/qatalogue/templates/main_page.html
@@ -9,5 +9,6 @@
     <a href="ads/cars">Cars</a>
     <a href="ads/motorcycles">Motorcycles</a>
     <a href="ads/scooters">Scooters</a>
+    <a href="dealers">Dealers</a>
 </body>
 </html>
