--- a/qatalogue/templates/ads.html
+++ b/qatalogue/templates/ads.html
@@ -7,7 +7,7 @@
 <body>
     <h1>{{category_name}}:</h1>
     {%for product in products%}
-    {{product}}<a href="{{product.4}}">IN</a>{{product.4}}
+    {{product}}<a href="/{{product.2}}">IN</a>{{product.2}}///{{product.5}}
     {%endfor%}
 </body>
 </html>
