--- a/qatalogue/templates/registration/edit.html
+++ b/qatalogue/templates/registration/edit.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>Registration</title>
+    <title>Dealer</title>
 </head>
 <body>
-    {{error}}
+    {{user.get_username}}
     <form method = "POST" enctype="multipart/form-data" class="NewThread">
     {% csrf_token %}
     <table>
