--- a/qatalogue/templates/ads.html
+++ b/qatalogue/templates/ads.html
@@ -9,5 +9,13 @@
     {%for product in products%}
     <li>{{product}}<a href="/ads/{{product.5}}{{category}}/{{product.2}}">IN</a>{{product.2}}///{{product.5}}</li>
     {%endfor%}
+
+    <form method = "POST" enctype="multipart/form-data" class="NewThread">
+    {% csrf_token %}
+    <table>
+    {{filter_form}}
+    </table>
+    <input type="submit" value="confirm" class="confirm">
+    </form>
 </body>
 </html>
