--- a/qatalogue/templates/ads.html
+++ b/qatalogue/templates/ads.html
@@ -25,7 +25,9 @@
     {% for obj in filter.qs %}
         <li><a href="/ads/{{category}}/{{obj.id}}">{{ obj.producer }} {{ obj.model }}</a>
         .year-{{obj.year}}.{{obj.get_type_display}}.volume-
-        {{obj.volume}}.power-{{obj.power}}.{{obj.get_drive_display}}.ads-count-{{obj.ads}}.min-price-{{obj.min}}
+        {{obj.volume}}.power-{{obj.power}}.
+            {{obj.get_drive_display}}{{obj.get_cylinders_display}}{% if obj.cylinders %}-cylinders {% endif %}
+            .ads-count-{{obj.ads}}.min-price-{{obj.min}}
         </li>
     {% endfor %}
 </body>
