--- a/qatalogue/templates/ads.html
+++ b/qatalogue/templates/ads.html
@@ -30,5 +30,7 @@
             .ads-count-{{obj.ads}}.min-price-{{obj.min}}
         </li>
     {% endfor %}
+
+    <a href="/ads/{{category}}/add">ADD</a>
 </body>
 </html>
