--- a/qatalogue/templates/ad.html
+++ b/qatalogue/templates/ad.html
@@ -5,7 +5,8 @@
     <title>AD</title>
 </head>
 <body>
-    <h1>{{product.producer}} {{product.model}}</h1>
+    <h1> {{product.producer}} {{product.model}}</h1>
+    <img src="{{ product.pic.url }}" height="400"/>
         {%if category == 'cars'%}
             {{product.year}}, {{product.get_type_display}}, {{product.volume}}, {{product.power}}, {{product.get_drive_display}}
         {%elif category == 'motorcycles'%}
@@ -16,5 +17,6 @@
     {%for ad in ads%}
     <li>{{ad.dealer}}, {{ad.description}}, {{ad.price}}, {{ad.date}}</li>
     {%endfor%}
+        <a href="/ads/{{category}}/add?id={{product.id}}">ADD</a>
 </body>
 </html>
