--- a/qatalogue/templates/main_page.html
+++ b/qatalogue/templates/main_page.html
@@ -24,5 +24,8 @@
     <input name="mark" type="text" placeholder="Search...">
         <input type="submit" value="search" class="confirm">
     </form>
+
+    1 USD = {{cash_course.USD_in}} BYN
+    1 USD = {{cash_course.EUR_in}} BYN
 </body>
 </html>
