--- a/qatalogue/templates/ads.html
+++ b/qatalogue/templates/ads.html
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>{{category_name}}</title>
-</head>
-<body>
-    <h1>{{category_name}}:</h1>
-    {%for product in products%}
-    <li>{{product}}<a href="/ads/{{product.5}}{{category}}/{{product.2}}">IN</a>{{product.2}}///{{product.5}}</li>
-    {%endfor%}
-
-    <form method = "POST" enctype="multipart/form-data" class="NewThread">
-    {% csrf_token %}
-    <table>
-    {{filter_form}}
-    </table>
-    <input type="submit" value="confirm" class="confirm">
-    </form>
----------------------------------------------------------
+{% extends "base.html" %}
+{% block title %}{{category_name}}{% endblock title %}
+{% block header_name %}{{category_name}}{% endblock header_name %}
+{% block option %}
     <table width="20%"><form action="" method="get">
         {{ filter.form.as_table }}
         <input type="submit" />
     </form></table>
+{% endblock option%}
+{% block content%}
+    <a href="/ads/{{category}}/add">ADD</a>
     {% for obj in filter.qs %}
         <li>    <img src="{{ obj.pic.url }}" height="100"/>
 
@@ -32,7 +19,4 @@
             .ads-count-{{obj.ads}}.min-price-{{obj.min}}
         </li>
     {% endfor %}
-
-    <a href="/ads/{{category}}/add">ADD</a>
-</body>
-</html>
+{% endblock content %}
