--- a/qatalogue/templates/base.html
+++ b/qatalogue/templates/base.html
@@ -5,12 +5,16 @@
     <title>{% block title %}Qatalogue{% endblock title %}</title>
 </head>
 <body>
+    <h1>
+    {% block header_name %}
+    Welcome :8
+    {% endblock header_name %}
+    </h1>
     {% block header %}
-    <h1>Welcome :8</h1>
-    <a href="ads/cars">Cars</a>
-    <a href="ads/motorcycles">Motorcycles</a>
-    <a href="ads/scooters">Scooters</a>
-    <a href="dealers">Dealers</a>
+    <a href="/ads/cars">Cars</a>
+    <a href="/ads/motorcycles">Motorcycles</a>
+    <a href="/ads/scooters">Scooters</a>
+    <a href="/dealers">Dealers</a>
     1 USD = {{cash_course.USD_in}} BYN
     1 USD = {{cash_course.EUR_in}} BYN
 
@@ -24,15 +28,15 @@
     {% endblock header %}
 
 
-    {% block option %}
     <form action="{% url 'search' %}" method="get">
 
     <input name="mark" type="text" placeholder="Search...">
         <input type="submit" value="search" class="confirm">
     </form>
+
+
+    {% block option %}
     {% endblock option %}
-
-
     {% block content %}
     {% endblock content %}
 </body>
