--- a/qatalogue/templates/dealers.html
+++ b/qatalogue/templates/dealers.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Dealers</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Dealers{% endblock title %}
+{% block header_name %}Dealers{% endblock header_name %}
+{% block content %}
     <h1>Dealers:</h1>
     {%for dealer in dealers%}
-    <li>{{dealer}}</li><a href="ads/dealers/{{dealer.0}}">{{dealer.0}} ads</a>
+    <li>{{dealer.0}}, rating: {{dealer.1}},
+        website: {{dealer.2}}, {{dealer.4}} ads, {{dealer.3}}</li><a href="/ads/dealers/{{dealer.0}}">{{dealer.0}} ads</a>
     {%endfor%}
-</body>
-</html>
+{% endblock content %}
