--- a/qatalogue/templates/main_page.html
+++ b/qatalogue/templates/main_page.html
@@ -1,31 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Qatalogue</title>
-</head>
-<body>
-    <h1>Welcome :8</h1>
-    <a href="ads/cars">Cars</a>
-    <a href="ads/motorcycles">Motorcycles</a>
-    <a href="ads/scooters">Scooters</a>
-    <a href="dealers">Dealers</a>
+{% extends "base.html" %}
+{% block content %}
+    About project, statistics, counts, and other here.
+{% endblock content %}
 
-
-    {% if user.is_authenticated %}
-        {{user.get_username}}
-        <a href="{% url 'logout'%}?next={{request.path}}">Logout</a>
-    {% else %}
-        <a href="{% url 'login'%}?next={{request.path}}">Login</a> or
-        <a href="/registration">Register</a>
-    {% endif %}
-    <form action="{% url 'search' %}" method="get">
-
-    <input name="mark" type="text" placeholder="Search...">
-        <input type="submit" value="search" class="confirm">
-    </form>
-
-    1 USD = {{cash_course.USD_in}} BYN
-    1 USD = {{cash_course.EUR_in}} BYN
-</body>
-</html>
