--- a/qatalogue/templates/new_ad.html
+++ b/qatalogue/templates/new_ad.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>New {{category}}</title>
-</head>
-<body>
-
-
----------------------------------------------------------
-
+{% extends "base.html" %}
+{% block title %}New {{category}}{% endblock title %}
+{% block header_name %}New {{category}}{% endblock header_name %}
+{% block content %}
     <form method = "POST" enctype="multipart/form-data">
     {% csrf_token %}
     <table>
@@ -16,6 +9,4 @@
     </table>
     <input type="submit" value="confirm">
     </form>
-
-</body>
-</html>
+{% endblock content %}
