--- a/qatalogue/templates/main_page.html
+++ b/qatalogue/templates/main_page.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block content %}
     About project, statistics, counts, and other here.
 {% endblock content %}
