--- a/qatalogue/static/css/base.css
+++ b/qatalogue/static/css/base.css
@@ -1,5 +1,5 @@
 html{
-
+    background-color: #8a8a8a;
 }
 
 .header {
@@ -120,8 +120,52 @@ th.h_m_th:hover {
     background-color: #9c0b00;
 }
 
+.option {
+    position: fixed;
+    top: 20%;
+    left: 0%;
+    height: 100%;
+    width: 20%;
+    z-index: -1;
+    padding-top: 1%;
+}
+
+.miniheader {
+    position: fixed;
+    z-index: -1;
+    top: 0%;
+    left: 0%;
+    height: 20%;
+    width: 20%;
+    background-color: #545454;
+}
+
+.miniheader_name {
+    position:absolute;
+    top: 20%;
+    left: 6%;
+    z-index: 1;
+    margin: 0%;
+    color: white;
+    font-size: 32px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.miniheader_subname {
+    position:absolute;
+    top: 60%;
+    left: 40%;
+    z-index: 1;
+    margin: 0%;
+    color: white;
+}
+
 .content {
     position: absolute;
-    left: 0%;
+    left: 20%;
     top: 20%;
+    width: 60%;
+    min-height: 100%;
+    background-color: white;
 }
