--- a/qatalogue/templates/ad.html
+++ b/qatalogue/templates/ad.html
@@ -2,17 +2,31 @@
 {% block title %}{{product.producer}} {{product.model}}{% endblock title%}
 {% block header_name %}{{product.producer}} {{product.model}}{% endblock header_name %}
 {% block content %}
-    <h1> {{product.producer}} {{product.model}}</h1>
-    <img src="{{ product.pic.url }}" height="400"/>
+    <h1 class="one_name"> {{product.producer}} {{product.model}}</h1>
+    <div class="one_pic"><img src="{{ product.pic.url }}" width="100%"/></div>
+    <table class="one_attributes">
         {%if category == 'cars'%}
-            {{product.year}}, {{product.get_type_display}}, {{product.volume}}, {{product.power}}, {{product.get_drive_display}}
+        <tr><th>Year:</th><th>{{product.year}}</th></tr>
+        <tr><th>Type:</th><th>{{product.get_type_display}}</th></tr>
+        <tr><th>Volume:</th><th>{{product.volume}}</th></tr>
+        <tr><th>Power:</th><th>{{product.power}}</th></tr>
+        <tr><th>Drive unit:</th><th>{{product.get_drive_display}}</th></tr>
         {%elif category == 'motorcycles'%}
-            {{product.get_type_display}}, {{product.cylinders}}, {{product.volume}}, {{product.power}}
+        <tr><th>Type:</th><th>{{product.get_type_display}}</th></tr>
+        <tr><th>Cylinders:</th><th>{{product.cylinders}}</th></tr>
+        <tr><th>Volume:</th><th>{{product.volume}}</th></tr>
+        <tr><th>Power:</th><th>{{product.power}}</th></tr>
         {%elif category == 'scooters'%}
-            {{product.max_speed}}, {{product.power}}, {{product.battery_capacity}}
+        <tr><th>Maximal speed:</th><th>{{product.max_speed}}</th></tr>
+        <tr><th>Power:</th><th>{{product.power}}</th></tr>
+        <tr><th>Battery capacity:</th><th>{{product.battery_capacity}}</th></tr>
         {%endif%}
+    </table>
+        <a class="one_add" href="/ads/{{category}}/add?id={{product.id}}">ADD ad</a>
     {%for ad in ads%}
-    <li>{{ad.dealer}}, {{ad.description}}, {{ad.price}}, {{ad.date}}</li>
+    <table class="deal">
+        <tr><th class="deal_dealer"><a class="deal_dealer_a" href="/ads/dealers/{{ad.dealer}}">{{ad.dealer}}</a></th><th class="deal_date">{{ad.date}}</th></tr>
+        <tr><th class="deal_price">{{ad.price}} USD</th><th class="deal_desc">{{ad.description}}</th></tr>
+    </table>
     {%endfor%}
-        <a href="/ads/{{category}}/add?id={{product.id}}">ADD</a>
 {% endblock content%}
