--- a/qatalogue/static/css/base.css
+++ b/qatalogue/static/css/base.css
@@ -218,7 +218,7 @@ a.product_name:hover {
 }
 
 a.product_add {
-    display: block;
+    display: table;
     width: 10%;
     position: relative;
     margin-top: 1%;
@@ -315,3 +315,21 @@ a.deal_dealer_a:hover {
     color: white;
     background-color: #b50e02;
 }
+
+.dealer_name {
+    text-align: left;
+    width: 25%;
+    color: #3b0400;
+}
+
+.dealer_website {
+    text-align: right;
+}
+
+.dealer_desc {
+    margin-left: 2%;
+    width: 98%;
+    margin-bottom: 3%;
+    color: #545454;
+}
+
