--- a/qatalogue/static/css/base.css
+++ b/qatalogue/static/css/base.css
@@ -219,7 +219,7 @@ a.product_name:hover {
 
 a.product_add {
     display: table;
-    width: 10%;
+    width: auto;
     position: relative;
     margin-top: 1%;
     left: 1%;
@@ -320,6 +320,27 @@ a.deal_dealer_a:hover {
     text-align: left;
     width: 25%;
     color: #3b0400;
+}
+
+.dealer_rating {
+    text-align: left;
+    width: 11%;
+    color: #3b0400;
+}
+
+a.dealer_rate {
+    display: table;
+    width: auto;
+    position: relative;
+    color: #3b0400;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: #9c0b00;
+}
+
+a.dealer_rate:hover {
+    color: white;
+    background-color: #b50e02;
 }
 
 .dealer_website {
