--- a/qatalogue/templates/dealer_ads.html
+++ b/qatalogue/templates/dealer_ads.html
@@ -3,6 +3,14 @@
 {% block header_name %}{{category_name}}{% endblock header_name %}
 
 {% block content%}
+    <table class="deal">
+        <tr><th class="dealer_name"><a href="/ads/dealers/{{dealer.name}}" class="deal_dealer_a">{{dealer.name}} [{{dealer.ads}} ads]</a></th>
+            <th class="dealer_rating">rating: {{dealer.rating}}</th>
+            <th><a class="dealer_rate" href="/dealers/rate?id={{dealer.id}}">rate/check reviews</a></th>
+            <th class="dealer_website"><a style="color: #545454;" href="{{dealer.website}}">{{dealer.website}}</a></th></tr>
+    </table>
+        <div class="dealer_desc">{{dealer.description}}</div>
+
     <table style="margin-left: 1%;"><tr>
         <th><a class="product_add" href="/ads/cars/add">ADD car</a></th>
         <th><a class="product_add" href="/ads/motorcycles/add">ADD motorcycle</a></th>
