--- a/qatalogue/templates/registration/password_reset_complete.html
+++ b/qatalogue/templates/registration/password_reset_complete.html
@@ -1,2 +1,7 @@
+{% extends "base.html" %}
+{% block title %}Password changing{% endblock title %}
+{% block header_name %}Password changing{% endblock header_name %}
+{% block content %}
 <h1>The password has been changed!</h1>
 <p><a href="{% url 'login' %}">log in again?</a></p>
+{% endblock content %}
