--- a/qatalogue/templates/registration/password_reset_confirm.html
+++ b/qatalogue/templates/registration/password_reset_confirm.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+{% block title %}Password changing{% endblock title %}
+{% block header_name %}Password changing{% endblock header_name %}
+{% block content %}
 {% if validlink %}
         <p>Please enter (and confirm) your new password.</p>
         <form action="" method="post">
@@ -23,3 +27,4 @@
         <h1>Password reset failed</h1>
         <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
     {% endif %}
+{% endblock content %}
