--- a/qatalogue/templates/registration/password_reset_done.html
+++ b/qatalogue/templates/registration/password_reset_done.html
@@ -1,1 +1,6 @@
+{% extends "base.html" %}
+{% block title %}Password changing{% endblock title %}
+{% block header_name %}Password changing{% endblock header_name %}
+{% block content %}
 <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
+{% endblock content %}
