--- a/qatalogue/templates/registration/password_reset_form.html
+++ b/qatalogue/templates/registration/password_reset_form.html
@@ -1,5 +1,10 @@
+{% extends "base.html" %}
+{% block title %}Password changing{% endblock title %}
+{% block header_name %}Password changing{% endblock header_name %}
+{% block content %}
 <form action="" method="post">{% csrf_token %}
     {% if form.email.errors %} {{ form.email.errors }} {% endif %}
         <p>{{ form.email }}</p>
     <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
 </form>
+{% endblock content %}
