--- a/qatalogue/templates/registration/registration.html
+++ b/qatalogue/templates/registration/registration.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Registration</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Registration{% endblock title %}
+{% block header_name %}Registration{% endblock header_name %}
+{% block content %}
     {{error}}
     <form method = "POST" enctype="multipart/form-data" class="NewThread">
     {% csrf_token %}
@@ -13,5 +10,4 @@
     </table>
     <input type="submit" value="confirm" class="confirm">
 </form>
-</body>
-</html>
+{% endblock content %}
