--- a/qatalogue/templates/registration/registration_comlete.html
+++ b/qatalogue/templates/registration/registration_comlete.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Qatalogue</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Registration{% endblock title %}
+{% block header_name %}Registration{% endblock header_name %}
+{% block content %}
     <h1>Welcome :8</h1>
     <a href="ads/cars">Cars</a>
     <a href="ads/motorcycles">Motorcycles</a>
     <a href="ads/scooters">Scooters</a>
     <a href="dealers">Dealers</a>
-</body>
-</html>
+{% endblock content %}
