--- a/qatalogue/templates/registration/registration.html
+++ b/qatalogue/templates/registration/registration.html
@@ -5,7 +5,7 @@
     {{error}}
     <form method = "POST" enctype="multipart/form-data" class="NewThread">
     {% csrf_token %}
-    <table>
+    <table style="margin-left: 1%">
     {{form}}
     </table>
     <input type="submit" value="confirm" class="confirm">
