--- a/qatalogue/templates/ads.html
+++ b/qatalogue/templates/ads.html
@@ -2,9 +2,9 @@
 {% block title %}{{category_name}}{% endblock title %}
 {% block header_name %}{{category_name}}{% endblock header_name %}
 {% block option %}
-    <table width="20%"><form action="" method="get">
+    <table  style="margin-left: 1%" width="20%"><form action="" method="get">
         {{ filter.form.as_table }}
-        <input type="submit"/>
+        <input class="but" type="submit"/>
     </form></table>
 {% endblock option%}
 {% block content%}
