--- a/qatalogue/templates/new_ad.html
+++ b/qatalogue/templates/new_ad.html
@@ -4,7 +4,7 @@
 {% block content %}
     <form method = "POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <table>
+    <table style="margin-left: 1%">
     {{form}}
     </table>
     <input type="submit" value="confirm">
