--- a/qatalogue/templates/registration/edit.html
+++ b/qatalogue/templates/registration/edit.html
@@ -5,9 +5,9 @@
     {{user.get_username}}
     <form method = "POST" enctype="multipart/form-data" class="NewThread">
     {% csrf_token %}
-    <table>
+    <table style="margin-left: 1%">
     {{form}}
     </table>
-    <input type="submit" value="confirm" class="confirm">
+    <input type="submit" value="confirm" class="but">
     </form>
 {% endblock content %}
