--- a/qatalogue/templates/review.html
+++ b/qatalogue/templates/review.html
@@ -12,7 +12,7 @@
 
     <form method = "POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <table>
+    <table style="margin-left: 1%">
     {{form}}
     </table>
     <input type="submit" value="confirm">
