--- a/qatalogue/templates/base.html
+++ b/qatalogue/templates/base.html
@@ -42,7 +42,7 @@
                 <div class="search">
     <form action="{% url 'search' %}" method="get">
 
-    <input name="mark" type="text" placeholder="Search..." class="search_form">
+    <input name="mark" type="text" placeholder="Search: {{search_initial}}" class="search_form">
         <input type="submit" value="search" class="search_button">
     </form>
                 </div>
